--- a/res/editor.qss
+++ b/res/editor.qss
@@ -2,7 +2,7 @@ QPlainTextEdit {
     background-color: #f5f5f5;
     color: #333333;
     font-family: "Courier New";
-    font-size: 14px;
+    font-size: 16px;
     border: 2px solid #007ACC;
     border-radius: 5px;
     padding: 5px;
@@ -20,6 +20,7 @@ QScrollBar:vertical {
     width: 12px;
     margin: 0px 0px 0px 0px;
     border: 1px solid #D4D4D4;
+    border-radius: 5px;
 }
 
 QScrollBar::handle:vertical {
@@ -69,5 +70,12 @@ QToolTip {
     border: 1px solid black;
     padding: 3px;
     border-radius: 3px;
+}
+
+LineNumberArea {
+    background: #B3B3B3;
+    color: #333333;
+    font-family: "Courier New";
+    font-size: 16px;
 }
 
